--- a/bi-platform-v2-plugin/build.properties
+++ b/bi-platform-v2-plugin/build.properties
@@ -1,4 +1,4 @@
-project.revision=5.0-SNAPSHOT
+project.revision=5.0.3
 
 # Stage: TRUNK | STABLE | BETA | other branch
 project.stage=STABLE
@@ -6,10 +6,10 @@ project.stage=STABLE
 
 project.version=4.0-SNAPSHOT
 
-dependency.pentaho-cpf-plugin.revision=5.0-SNAPSHOT
+dependency.pentaho-cpf-plugin.revision=5.0.3
 
 ivy.artifact.id=pentaho-cdf
 impl.title=Pentaho Community Dashboard Framework
-dependency.bi-platform.revision=5.0-SNAPSHOT
-dependency.json.revision=5.0-SNAPSHOT
+dependency.bi-platform.revision=5.0.3
+dependency.json.revision=5.0.3
 build.samples=true
